# sophon-research

./: .gitignore  LICENSE  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml
docs/: install-smoke.md
plugins/sophon-research/: README.md  pyproject.toml
plugins/sophon-research/.codex-plugin/: plugin.json
plugins/sophon-research/skills/sophon-research/: SKILL.md
plugins/sophon-research/skills/sophon-research/references/: api.md  research-workflow.md
plugins/sophon-research/src/sophon_research/: __init__.py  files.py  sophon.py
skills/sophon-research/: SKILL.md
skills/sophon-research/references/: api.md  research-workflow.md
src/sophon_research/: __init__.py  cli.py  formatting.py  sophon.py
tests/: __init__.py  test_cli.py  test_files.py  test_plugin_package.py  test_sophon_client.py
