[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sophon-research"
version = "0.1.1"
description = "Codex plugin and local CLI for AI research using Sophon's public catalog."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jerry Fane" }]
keywords = ["ai-research", "codex", "evals", "papers", "sophon"]

[project.scripts]
sophon-research = "sophon_research.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
